--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-cfg-vpn (0.12.105+vyos2+lithium15) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-cfg-vpn: formatting changes for style consistency
+  * vyatta-cfg-vpn: further tidy up of vyatta-vti-config.pl
+  * vyatta-cfg-vpn: vti interfaces remain link down after ipsec sa renewal
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Thu, 18 Jun 2015 07:44:43 +0100
+ 
 vyatta-cfg-vpn (0.12.105+vyos2+lithium14) unstable; urgency=low
 
   * vyatta-cfg-vpn: update dh_gencontrol with new development build flag
