--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.105+vyos2+lithium16) unstable; urgency=low
+
+  [ Alex Harpin ]
+  * vyatta-cfg-vpn: validate peer address for vti based vpn connections
+
+ -- Alex Harpin <development@landsofshadow.co.uk>  Fri, 26 Jun 2015 07:51:33 +0100
+ 
 vyatta-cfg-vpn (0.12.105+vyos2+lithium15) unstable; urgency=low
 
   [ Alex Harpin ]
