--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (0.12.105+vyos2+current3) unstable; urgency=medium
+
+  * Merge StrongSWAN 5.x compatibility changes from Jeff Leung
+
+ --  <daniil@baturin.org>  Thu, 11 Feb 2016 12:31:57 -0500
+
 vyatta-cfg-vpn (0.12.105+vyos2+current2) unstable; urgency=low
 
   * Remove dependency on vyatta-ipsec for migration to upstream
