--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-cfg-vpn (0.12.105+vyos1+helium12) unstable; urgency=low
+
+  * T423: use listNodes rather than listActiveNodes to enable completion
+    for uncommited IKE and ESP groups.
+
+ -- Daniil Baturin <daniil@baturin.org>  Fri, 13 Oct 2017 01:41:17 +0200
+
 vyatta-cfg-vpn (0.12.105+vyos1+helium11) unstable; urgency=low
 
   [ Kim Hagen ]
