--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-cfg-vpn (1.3-1) unstable; urgency=medium
+
+  * New LTS branch.
+
+ -- Daniil Baturin <daniil@vyos.io>  Mon, 04 Jan 2021 17:11:34 +0200
+
 vyatta-cfg-vpn (0.12.105+vyos2+current6) unstable; urgency=low
 
   * T833: accel-ppp: pptp implementation
